deploy/manifests/istio/istio-ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cluster-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      # doing this will make all request redirect to https
      # not good when doing http challenge
      # instead, we will use VirtualService to redirect
      # tls:
      #   httpsRedirect: true
      hosts:
        - "pbl6.mamlong34.monster"
        - "argocd.pbl6.mamlong34.monster"
        - "mlflow.pbl6.mamlong34.monster"
        - "argo.pbl6.mamlong34.monster"
        - "songs-uploader.pbl6.mamlong34.monster"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: letsencrypt-crt-secret
      hosts:
        - "pbl6.mamlong34.monster"
        - "argocd.pbl6.mamlong34.monster"
        - "mlflow.pbl6.mamlong34.monster"
        - "argo.pbl6.mamlong34.monster"
        - "songs-uploader.pbl6.mamlong34.monster"
