deploy/manifests/istio/istio-ingress/tls-redirect-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tls-redirect
spec:
  hosts:
    - "pbl6.mamlong34.monster"
    - "argocd.pbl6.mamlong34.monster"
    - "mlflow.pbl6.mamlong34.monster"
    - "argo.pbl6.mamlong34.monster"
    - "songs-uploader.pbl6.mamlong34.monster"
  gateways:
    - cluster-gateway
  http:
    - match:
        - port: 80
          scheme:
            exact: http
          uri:
            prefix: /
      redirect:
        scheme: https
